stylesheet/base.css
.page table#edu-table td{
    padding-left: 0px;
    padding-right: 20px;
}
.card-container {
    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
    /* border-radius: 10px; */
    padding: 15px 20px;
}

#jane_headshot {
    width:100px;
    height:100px;
}

h4.project-title {
    color: #355ab7;
}

#owner_name{
    text-align: left;
    font-size: 35px;
}


.header-link {
	text-align: right;

	margin-bottom: 15px;
	color: #000000;

}

#sections{
    text-align: right;
    color: #000000;
    font-size: 30px;
}

.landing-description{
    margin-left: 25px;
    font-size:20px;
}

.project-description{
    margin-top: 15px;
    font-size: 15px;
}

body {
  padding-top: 54px;
}

@media (min-width: 992px) {
  body {
    padding-top: 56px;
  }
}

.portfolio-item {
  margin-bottom: 30px;
}

.pagination {
  margin-bottom: 30px;
}


#contact{
    font-size:18px;
    color: #355ab7;
}


#sign{
    text-align: center;
}

